Updated recent news

--- a/app/views/events.haml
+++ b/app/views/events.haml
@@ -6,40 +6,12 @@
             :height => '355px', 
             :scrolling => 'no', 
             :src => 'https://calendar.google.com/calendar/embed?src=lqpplsoj3n2j9er79ovng2l0lo%40group.calendar.google.com&ctz=America/New_York',
-            :style => 'border:solid 1px #777;border-radius:5px;padding:5px;background-color:rgb(204,204,204);',  
+            :style => 'border:solid 1px #777;border-radius:5px;padding:5px;margin-bottom:5px;background-color:rgb(204,204,204);',  
             :width => '100%'}
   .col-xs-12.col-md-8
     .page-header
       %h3 Recent News
     %blockquote
       %p>
-        %a{:href => 'http://www.studyabroad.sc.edu/index.php?option=com_content&view=article&id=501:engineering-students-bring-economic-stability-to-ecuadorean-coffee-farmers-gain-real-world-experience&catid=86:latest-news&Itemid=1118'} Engineering Students Bring Economic Stability to Ecuadorean Coffee Farmers, Gain Real World Experience
-      %small December 12, 2014 via Study Abroad at University of South Carolina
-    %blockquote
-      %p>
-        %a{:href => 'http://uscdrinksrain.blogspot.com/'} Drink More Rain
-      %small December 4, 2014 via Sustainable Carolina
-    %blockquote
-      %p>
-        %a{:href => "http://www.marketwire.com/press-release/engineers-without-borders-usa-university-of-south-carolina-chapter-wins-knovel-grant-1792664.htm"} EWB USA University of South Carolina Chapter Wins Knovel Grant
-      %small May 20, 2013 via Market Wired
-    %blockquote
-      %p>
-        %a{:href => "http://finance.yahoo.com/news/engineers-without-borders-usa-university-130000283.html"} EWB USA University of South Carolina Chapter Wins Knovel Grant
-      %small May 20, 2013 via Yahoo Finance News
-    %blockquote
-      %p>
-        %a{:href => "http://online.wsj.com/article/PR-CO-20130520-905011.html?mod=googlenews_wsj#articleTabs%3Darticle"} EWB USA University of South Carolina Chapter Wins Knovel Grant
-      %small May 20, 2013 via Wall Street Journal
-    %blockquote
-      %p>
-        %a{:href => "http://www.diariopinion.com/primeraPlana/verArticulo.php?id=855230"} Impulsar&aacute;n proyectos de ecosalud
-      %small May 19, 2013 via Diario Opini&oacute;n
-    %blockquote
-      %p>
-        %a{:href => "http://www.engr.sc.edu/news-2013/02-28-13_Engineers-Without-Borders.html"} Engineers Without Borders: Mission to Serve
-      %small February 28, 2013 via USC CEC News
-    %blockquote
-      %p>
-        %a{:href => "http://www.cse.sc.edu/job/engineers-without-borders-prove-sustainable-solutions-have-no-limits"} Engineers Without Borders Prove Sustainable Solutions Have No Limits
-      %small January 18, 2013 via USC Computer Science & Engineering Jobs Board
+        %a{:href => 'http://www.dailygamecock.com/article/2016/02/engineers-without-borders-sustainable-engineering?_h=fa14ff56-3c5c-465c-bfb2-86935f6b96e4'} Engineers Without Borders Solve Real-World Problems Through Sustainable Engineering
+      %small February 10, 2016 via The Daily Gamecock
