--- a/app/views/contact.haml
+++ b/app/views/contact.haml
@@ -1,16 +1,24 @@
 %br
 .row
   .col-xs-12.col-md-8.col-md-push-2
-    %form{:action => "", :method => "post"}
-      .formgroup
-        %label Name
-        %input.form-control{:type => "text", :name => "name"}
-        %br
-        %label Email
-        %input.form-control{:type => "text", :name => "email"}
-        %br
-        %label Body
-        %textarea.form-control{:name => "body"}
-        %br
-        %button.btn.btn-primary{:type => 'submit'} Send
+    %div 
+      %p
+        Our contact information can be found on 
+        = succeed "." do
+          %a{:href => "https://garnetgate.sa.sc.edu/organization/ewob/about"} Garnet Gate
+        Students can log in to see more details such as meeting times and events.
+      %p
+        Alternatively, use this form to email us directly:
+        %form{:action => "", :method => "post"}
+          .formgroup
+            %label Name
+            %input.form-control{:type => "text", :name => "name"}
+            %br
+            %label Email
+            %input.form-control{:type => "text", :name => "email"}
+            %br
+            %label Body
+            %textarea.form-control{:name => "body"}
+            %br
+            %button.btn.btn-primary{:type => 'submit'} Send
 %br
