Updated information in index.haml

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -13,7 +13,7 @@
   .col-xs-12.col-md-5.col-md-offset-1
     %h3 Who We Are
     %p 
-      Engineers Without Borders USA (EWB-USA) is at the forefront of a movement within the engineering community. By offering unique, hands-on opportunities for engineers and other professions to work directly with communities in need, EWB-USA is educating the next generation of engineers in sustainable engineering practices by providing real world experience and problem solving. EWB-USA is a 501(c)3 non-profit humanitarian organization dedicated to partnering with lower-income communities around the world. Over 14,700 members work to support these efforts with projects in water supply, sanitation, energy, agriculture, civil works, structures and information systems.
+      Engineers Without Borders USA (EWB-USA) is at the forefront of a movement within the engineering community. By offering unique, hands-on opportunities for engineers and other professions to work directly with communities in need, EWB-USA is educating the next generation of engineers in sustainable engineering practices by providing real world experience and problem solving. EWB-USA is a 501(c)3 non-profit humanitarian organization dedicated to partnering with lower-income communities around the world. Over 16,800 members work to support these efforts with projects in water supply, sanitation, energy, agriculture, civil works, structures and information systems.
     %p
       Learn more about EWB-USA at the national website,
       = succeed "." do
@@ -24,12 +24,12 @@
       to learn more about chapter activities and projects.
     %h3 What We Do
     %p
-      EWB-USC is working on projects locally and internationally. Our international project is in La Victoria, Ecuador with a coffee producing community of about 1,500 people. The dry season in La Victoria prevents the farmers from producing as much coffee as they could otherwise, which impedes their economic development. To combat this issue, our chapter has designed and built a pipeline from a waterfall one mile away from the farms that runs year-round. Currently, we are in the monitoring phase of the project to work on sustainability and full project turnover to the community.
+      EWB-USC is working on projects locally and internationally. Our international project is in La Victoria, Ecuador with a coffee producing community of about 1,500 people. The dry season in La Victoria prevents the farmers from producing as much coffee as they could otherwise, which impedes their economic development. To combat this issue, our chapter has designed and built a pipeline from a waterfall one mile away from the farms that runs year-round. Currently, we are researching and defining another water supply related project in the nearby area to improve community sustainability.
     %p 
       Locally, we recently partnered with Sustainable Carolina at the University of South Carolina to design and build a water fountain that uses filtered water from the rainwater runoff from a dormitory roof. We also lead Lego Robotics teams at a couple local elementary schools annually to inspire children to continue their interests in engineering. In the past, we have built an irrigation system for the Honors Residence Hall Gardens at the University of South Carolina using rain barrels that collect rain from the roof of the dorm.
     %h3 Chapter Information
     %p 
-      Our chapter has general meetings once a week.  The Engineering Committee meets before our general meeting, and all other committees meet after the general meeting to work on delegating tasks for the coming week. Check out the weekly meeting times and locations under the Events tab. Chapter dues are $10 per semester to cover the cost of chapter dues to EWB-USA. The EWB-USC chapter covers all travel costs to the project sites by grants and donations. Due to this, travel spots are limited to about eight people who are all able to substantially contribute to the project while on-site.
+      Our chapter has general meetings once a week.  The Engineering Committee meets before our general meeting, and all other committees meet after the general meeting to work on delegating tasks for the coming week. Check out the weekly meeting times and locations under the Events tab. The EWB-USC chapter covers all travel costs to the project sites by grants and donations. Due to this, travel spots are limited to about eight people who are all able to substantially contribute to the project while on-site.
       
   .col-xs-12.col-md-5
     / youtube embed
