Removed email form until a fix is found

--- a/app/views/contact.haml
+++ b/app/views/contact.haml
@@ -7,18 +7,18 @@
         = succeed "." do
           %a{:href => "https://garnetgate.sa.sc.edu/organization/ewob/about"} Garnet Gate
         Students can log in to see more details such as meeting times and events.
-      %p
-        Alternatively, use this form to email us directly:
-        %form{:action => "", :method => "post"}
-          .formgroup
-            %label Name
-            %input.form-control{:type => "text", :name => "name"}
-            %br
-            %label Email
-            %input.form-control{:type => "text", :name => "email"}
-            %br
-            %label Body
-            %textarea.form-control{:name => "body"}
-            %br
-            %button.btn.btn-primary{:type => 'submit'} Send
+-#      %p
+-#        Alternatively, use this form to email us directly:
+-#        %form{:action => "", :method => "post"}
+-#          .formgroup
+-#            %label Name
+-#            %input.form-control{:type => "text", :name => "name"}
+-#            %br
+-#            %label Email
+-#            %input.form-control{:type => "text", :name => "email"}
+-#            %br
+-#            %label Body
+-#            %textarea.form-control{:name => "body"}
+-#            %br
+-#            %button.btn.btn-primary{:type => 'submit'} Send
 %br
