--- a/app/views/support.haml
+++ b/app/views/support.haml
@@ -10,7 +10,7 @@
       You can financially support our projects by donating through the EWB-USA national website.
       Funding can be contributed for
       = succeed "," do
-        %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
+        %a{:href => 'https://support.ewb-usa.org/events/university-south-carolina-chapter/e83986'} general chapter activities
       or designated for a specific international project.
       EWB-USA is a non-profit company, and your donation is therefore tax deductible.
     
