Updated project information

--- a/app/views/projects.haml
+++ b/app/views/projects.haml
@@ -2,7 +2,27 @@
 .row
   .col-xs-12.col-md-10.col-md-offset-1
     .page-header
-      %h3 EWB-USC's International Efforts
+      %h3 Current Project
+    %b El Cedro
+    %p
+      Since completing the pipeline in La Victoria, the team has begun a new project in the nearby town of El Cedro, also in Las Lajas. There is already a pipeline running from a nearby spring, but it needs significant maintenance to support the needs of the community. There are sections that are cracking due to UV and weather exposure, hanging without support structure, and water tanks that sit unused.
+    .row
+      .col-xs-6
+        %a.thumbnail{"data-lightbox" => 'garden', 
+          "data-title" => 'Nursery in Ecuador', 
+         :href => 'https://c5.staticflickr.com/6/5331/30248213780_2a1ce48edb_z.jpg'}
+          %img{:src => 'https://c5.staticflickr.com/6/5331/30248213780_2a1ce48edb_z.jpg'}
+      .col-xs-6
+        %a.thumbnail{"data-lightbox" => 'garden', 
+          "data-title" => 'Taken near El Cedro', 
+         :href => 'https://c2.staticflickr.com/6/5636/30458733121_60d69b92c7_z.jpg'}
+          %img{:src => 'https://c2.staticflickr.com/6/5636/30458733121_60d69b92c7_z.jpg'}
+    %p
+      The team has completed its first assessment trip and is reviewing the gathered data. Various tasks are being considered to address the problem: repairing the pipeline, creating a gray water filtration system, and/or establishing a robust sanitation system for the current water supply.
+.row
+  .col-xs-12.col-md-10.col-md-offset-1
+    .page-header
+      %h3 Past Projects
   .col-md-10.col-md-offset-1
     %b Community Needs
     %p
@@ -69,7 +89,18 @@
           .col-xs-12.col-md-12
             %b Monitoring Trip (January 2015)
             %p
-              During this trip, the team will establish a pipeline monitoring board to check the water flow and regularly maintain the pipeline when necessary, such as opening the cleanout structures to get rid of gravel and leaves that may be blocking the pipe. After this trip, the community should be completely in control of the pipeline. The team will also speak with stakeholders to see if there are any other community needs that could be turned into new EWB-USC project partnerships.
+              During this trip, the team established a pipeline monitoring board to check the water flow and regularly maintain the pipeline when necessary, such as opening the cleanout structures to get rid of gravel and leaves that may be blocking the pipe. The community is now completely in control of the pipeline. The team also spoke with stakeholders to see if there are any other community needs that could be turned into new EWB-USC project partnerships.
+-#      .col-xs-12.col-md-6
+-#        .row
+-#          .col-xs-12.col-md-12
+-#            %a.thumbnail{"data-lightbox" => 'garden', 
+-#              "data-title" => 'Test Title', 
+-#             :href => ''}
+-#              %img{:src => ''}
+-#          .col-xs-12.col-md-12
+-#            %b First Assessment Trip (April 2016)
+-#            %p
+-#              The team made its initial visit to El Cedro. Key points along the pipeline were visited to gather GPS coordinates and take photos for further analysis, which is currently in progress. A section of the pipeline was traversed and various deficiencies were noted, such as exposed or cracked piping and improper support structure. The team met members of the community to learn about people's needs and interests for the direction of the project. A Project Partnership Agreement with the town was drafted.
               
 / Locally
 .row
