Updated site project and committee descriptions

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -63,7 +63,7 @@
 
     %b Public Health Committee
     %p
-      To ensure project sustainability, the public health committee uses needs assessment to make sure all our projects originate from the community. They also investigate public health concerns in the project area to find possible future projects.
+      To ensure project sustainability, the public health committee uses needs assessment to make sure all our projects originate from the community. They also investigate public health concerns in the project area to find possible future projects. This group of students is currently researching water sanitation and various bacteria testing methods for our trip. Bacteria-infested water (specifically e-coli) is a major concern for the health of the local population in La Victoria, so the team will work to locate the source of contamination and to properly sanitize the water.
 
     %b Spanish Committee
     %p
