--- a/app/views/projects.haml
+++ b/app/views/projects.haml
@@ -18,7 +18,7 @@
          :href => 'https://c2.staticflickr.com/6/5636/30458733121_60d69b92c7_z.jpg'}
           %img{:src => 'https://c2.staticflickr.com/6/5636/30458733121_60d69b92c7_z.jpg'}
     %p
-      The team has completed its first assessment trip and is reviewing the gathered data. Various tasks are being considered to address the problem: repairing the pipeline, creating a gray water filtration system, and/or establishing a robust sanitation system for the current water supply.
+      The team has completed its first assessment trip and is reviewing the gathered data. Various tasks are being considered to address the problem: repairing the pipeline, creating a gray water filtration system, and/or establishing a robust sanitation system for the current water supply. The team is working on finding where the source of contamination is and a way to make sure this does not happen in the future. The students are brainstorming several engineering structures that will work best for the pipeline as it runs through many different types of terrain and obstacles in the rain forest.
 .row
   .col-xs-12.col-md-10.col-md-offset-1
     .page-header
