Added GoFundMe link to Support Us

--- a/app/views/support.haml
+++ b/app/views/support.haml
@@ -7,7 +7,11 @@
   .col-xs-12.col-md-10.col-md-offset-1
     %h4 Donate directly to the USC chapter
     %p
-      You can financially support our projects by donating through the EWB-USA national website.
+      We have a GoFundMe campaign! Help us bring safe drinking water to the 500 residents of El Cedro, Ecuador. Check it out 
+      = succeed "." do
+        %a{:href => 'https://www.gofundme.com/ecuador-clean-water-supply-project-2wcdz6u4'} here
+    %p
+      You can also support our projects by donating through the EWB-USA national website.
       Funding can be contributed for
       = succeed "," do
         %a{:href => 'https://support.ewb-usa.org/events/university-south-carolina-chapter/e83986'} general chapter activities
