--- a/app/views/support.haml
+++ b/app/views/support.haml
@@ -7,9 +7,12 @@
   .col-xs-12.col-md-10.col-md-offset-1
     %h4 Donate directly to the USC chapter
     %p
-      We have a GoFundMe campaign! Help us bring safe drinking water to the 500 residents of El Cedro, Ecuador. Check it out 
-      = succeed "." do
-        %a{:href => 'https://www.gofundme.com/ecuador-clean-water-supply-project-2wcdz6u4'} here
+      We have a
+      %a{:href => 'https://www.gofundme.com/ecuador-clean-water-supply-project-2wcdz6u4'} GoFundMe campaign 
+      and a
+      = succeed "!" do
+        %a{:href => 'https://crowdfunding.giving.sc.edu/project/4521'} USC Crowdfunding campaign
+      Help us bring safe drinking water to the 500 residents of El Cedro, Ecuador. 
     %p
       You can also support our projects by donating through the EWB-USA national website.
       Funding can be contributed for
